# user-verification-service-operator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  charmcraft.yaml  integration-requirements.txt  pyproject.toml  renovate.json  requirements.txt  tox.ini  unit-requirements.txt
.github/: .jira_sync_config.yaml
.github/workflows/: ci.yaml  cves.yaml  deploy.yaml  on_schedule.yaml  publish.yaml  release.yaml  release_libs.yaml  tests.yaml  tiobe.yaml
deployment/: common.auto.tfvars  main.tf
src/: charm.py  cli.py  configs.py  constants.py  env_vars.py  exceptions.py  integrations.py  secret.py  services.py  utils.py
src/grafana_dashboards/: user_verification_service.json.tmpl
src/loki_alert_rules/: user_verification_service_high_severity_log.rule
src/prometheus_alert_rules/: user_verification_service_unavailable.rule
templates/: ingress.json.j2
terraform/: MODULE_SPECS.md  main.tf  outputs.tf  variables.tf  versions.tf
tests/integration/: conftest.py  constants.py  test_charm.py  utils.py
tests/unit/: conftest.py  test_charm.py
