# Copyright 2025 Canonical Ltd.
# See LICENSE file for licensing details.

[project]
name = "user-verification-service-operator"
version = "0.0.0"
description = "Charmed Operator for Identity Platform User Verification Service"
requires-python = ">=3.10"
readme = "README.md"
license = {file = "LICENSE"}
dependencies = [
    "ops ~=3.0",
    "jinja2",
    "pydantic~=2.13.0",
    "cosl~=1.10.1",
    "lightkube~=0.22.0",
    "lightkube-models~=1.35.0.8",
]

[dependency-groups]
dev = [
    "pre-commit",
    "mypy",
    "types-pyyaml",
    {include-group = "fmt"},
    {include-group = "lint"},
    {include-group = "unit"},
    {include-group = "integration"},
]
fmt = [
    "isort",
    "ruff",
]
lint = [
    "codespell",
    "isort",
    "ruff",
    "tomli",
]
unit = [
    "coverage[toml]",
    "ops[testing]",
    "pytest",
    "pytest-mock",
]
integration = [
    "pytest",
    "requests",
    "uuid",
    "jubilant",
]

[tool.uv]
package = false

# Testing tools configuration
[tool.coverage.run]
branch = true
data_file = ".cover/.coverage"

[tool.coverage.report]
show_missing = true

[tool.coverage.xml]
output = ".cover/coverage.xml"

[tool.pytest.ini_options]
minversion = "6.0"
log_cli_level = "INFO"

# Linting and formatting tools configuration
[tool.codespell]
# https://github.com/codespell-project/codespell
skip = ".git,.tox,build,lib,venv,.venv,.mypy_cache,icon.svg,__pycache__"

[tool.isort]
# Profiles: https://pycqa.github.io/isort/docs/configuration/profiles.html
line_length = 99
profile = "black"

[tool.ruff]
# Default settings: https://docs.astral.sh/ruff/configuration/
# Settings: https://docs.astral.sh/ruff/settings/
line-length = 99
include = [
    "pyproject.toml",
    "src/**/*.py",
    "tests/**/*.py",
    "lib/charms/user_verification_service_operator/**/*.py"
]
extend-exclude = ["__pycache__", "*.egg_info"]
target-version = "py38"
preview = true

[tool.ruff.lint]
# Rules: https://docs.astral.sh/ruff/rules/
select = ["E", "W", "F", "C", "N", "D", "CPY"]
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D105",
    "D107",
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    "E501",
    "N818"
]
per-file-ignores = {"tests/*" = ["D100","D101","D102","D103","D104"]}

[tool.ruff.lint.flake8-copyright]
author = "Canonical Ltd."

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
pretty = true
mypy_path = "./src:./lib/:./tests"
exclude = 'lib/charms/((?!user_verification_service_operator/).)'
follow_imports = "silent"
warn_redundant_casts = true
warn_unused_configs = true
show_traceback = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true
check_untyped_defs = true
allow_redefinition = true
disallow_incomplete_defs = true
disallow_untyped_defs = true

# Ignore libraries that do not have type hint nor stubs
[[tool.mypy.overrides]]
module = ["ops.*", "pytest.*", "urllib3.*", "jinja2.*", "lightkube.*", "pytest_mock.*"]
ignore_missing_imports = true
